--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.5",
+    "@ngrx/store": "^18.0.1",
     "express": "^4.18.2",
     "ngx-skeleton-loader": "^9.0.0",
     "rxjs": "~7.8.0",
