--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.5",
     "@ngrx/store": "^18.0.1",
+    "@stripe/stripe-js": "^4.1.0",
     "express": "^4.18.2",
     "ngx-skeleton-loader": "^9.0.0",
+    "ngx-stripe": "^18.1.0",
     "rxjs": "~7.8.0",
+    "stripe": "^16.5.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
