--- a/angular.json
+++ b/angular.json
@@ -26,8 +26,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
-            ],
+              "src/styles.css"            ],
             "scripts": [],
             "server": "src/main.server.ts",
             "prerender": true,
