--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "ngx-skeleton-loader": "^9.0.0",
     "ngx-stripe": "^18.1.0",
+    "primeng": "^17.18.8",
     "rxjs": "~7.8.0",
     "stripe": "^16.5.0",
     "tailwind-scrollbar-hide": "^1.1.7",
