--- a/package.json
+++ b/package.json
@@ -11,47 +11,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0",
-    "@angular/cdk": "^17.3.8",
-    "@angular/common": "^17.0.0",
-    "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "@angular/forms": "^17.0.0",
-    "@angular/material": "^17.3.8",
-    "@angular/platform-browser": "^17.0.0",
-    "@angular/platform-browser-dynamic": "^17.0.0",
-    "@angular/platform-server": "^17.0.0",
-    "@angular/router": "^17.0.0",
-    "@angular/ssr": "^17.0.5",
-    "@ngrx/store": "^18.0.1",
-    "@stripe/stripe-js": "^4.1.0",
-    "express": "^4.18.2",
+    "@angular/animations": "^18.2.9",
+    "@angular/cdk": "^18.2.10",
+    "@angular/common": "^18.2.9",
+    "@angular/compiler": "^18.2.9",
+    "@angular/core": "^18.2.9",
+    "@angular/forms": "^18.2.9",
+    "@angular/material": "^18.2.10",
+    "@angular/platform-browser": "^18.2.9",
+    "@angular/platform-browser-dynamic": "^18.2.9",
+    "@angular/platform-server": "^18.2.9",
+    "@angular/router": "^18.2.9",
+    "@angular/ssr": "^18.2.10",
+    "@ngrx/store": "^18.1.1",
+    "@stripe/stripe-js": "^4.9.0",
+    "express": "^4.21.1",
     "ngx-skeleton-loader": "^9.0.0",
     "ngx-stripe": "^18.1.0",
     "primeicons": "^7.0.0",
-    "primeng": "^17.18.8",
-    "rxjs": "~7.8.0",
-    "stripe": "^16.5.0",
+    "primeng": "^17.18.11",
+    "rxjs": "~7.8.1",
+    "stripe": "^17.3.0",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "tslib": "^2.8.0",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.5",
-    "@angular/cli": "^17.0.5",
-    "@angular/compiler-cli": "^17.0.0",
-    "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
-    "autoprefixer": "^10.4.18",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
+    "@angular-devkit/build-angular": "^18.2.10",
+    "@angular/cli": "^18.2.10",
+    "@angular/compiler-cli": "^18.2.9",
+    "@types/express": "^5.0.0",
+    "@types/jasmine": "~5.1.4",
+    "@types/node": "^22.8.4",
+    "autoprefixer": "^10.4.20",
+    "jasmine-core": "~5.4.0",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "~5.2.2"
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.5.4"
   }
 }
