--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/jasmine": "~5.1.4",
     "@types/node": "^22.8.4",
     "autoprefixer": "^10.4.20",
+    "cypress": "^13.15.2",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
