--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ngrx/store": "^18.1.1",
     "@stripe/stripe-js": "^4.9.0",
     "express": "^4.21.1",
+    "marked": "^15.0.3",
+    "ngx-markdown": "^19.0.0",
     "ngx-skeleton-loader": "^9.0.0",
     "ngx-stripe": "^18.1.0",
     "primeicons": "^7.0.0",
